@@ -10,6 +10,11 @@ This project adheres to [[http://semver.org][Semantic Versioning]].
 
 * COMMENT [[https://github.com/ryuslash/yoshi-theme/compare/v6.2.0...HEAD][Unreleased]]
 
+** ADDED Colors and variables for ivy-posframe
+
+   Add the ivy-posframe faces: ~ivy-posframe~, ~ivy-posframe-border~,
+   ~ivy-posframe-border-width~, ~ivy-posframe-style~.
+
 * [[https://github.com/ryuslash/yoshi-theme/compare/v6.1.0...v6.2.0][6.2.0]] -- 2019-05-05
 :PROPERTIES:
 :CUSTOM_ID: release-6.2.0
